# relex-task

./: .gitignore  README.md  README.md~  task-6.txt  task-6.txt~
relex-task/: Flowerbed.cpp  Flowerbed.h  Gardener.cpp  Gardener.h  Sensor.h  WateringMachine.cpp  WateringMachine.h  common.h  main.cpp
relex-task-1/: Flowerbed.cpp  Gardener.cpp  Gardener.h  README.MD  Sensor.cpp  WateringMachine.cpp  common.cpp  main.cpp
relex-task-2/: Flowerbed.cpp  Flowerbed.h  Gardener.cpp  Gardener.h  README.MD  README.MD~  Sensor.cpp  Sensor.h  WateringMachine.cpp  beds.txt
relex-task-3/: 0-0.txt  1-0.txt~  Flowerbed.cpp  Gardener.cpp  README.MD  Sensor.cpp  WateringMachine.h  beds.txt~  changelog.txt  changelog3.txt  common.h
relex-task-4/: 0-0.txt~  1-0.txt  CMakeLists.txt  Flowerbed.cpp  Gardener.cpp  README.MD  Sensor.cpp  WateringMachine.cpp  WateringMachine.h  changelog4.txt~
relex-task-5/: 0-0.txt  1-0.txt  Flowerbed.cpp  Flowerbed.h  Gardener.cpp  Gardener.h  README.MD  Sensor.h  WateringMachine.cpp  WateringMachine.h  beds.txt  beds.txt~  changelog4.txt~  changelog5.txt  changelog5.txt~
